# pandas-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_configure.sh  requirements.txt
e2e_testing/: dataframe.py  join.py
include/: CMakeLists.txt
include/pandas-mlir/: InitAll.h
include/pandas-mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/pandas-mlir/Conversion/PandasToLinalg/: PandasToLinalg.h
include/pandas-mlir/Dialect/: CMakeLists.txt
include/pandas-mlir/Dialect/Arrow/IR/: ArrowBase.td  ArrowDialect.h  ArrowOps.h  ArrowOps.td  ArrowTraits.h  ArrowTypes.h  ArrowTypes.td  CMakeLists.txt
include/pandas-mlir/Dialect/Pandas/IR/: CMakeLists.txt  PandasAttributes.h  PandasAttributes.td  PandasBase.td  PandasDialect.h  PandasOps.h  PandasOps.td  PandasTypes.h  PandasTypes.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h  Passes.cpp
lib/Conversion/PandasToLinalg/: CMakeLists.txt  PandasToLinalg.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Arrow/IR/: ArrowDialect.cpp  ArrowOps.cpp  CMakeLists.txt
lib/Dialect/Pandas/IR/: CMakeLists.txt  PandasAttributes.cpp  PandasDialect.cpp  PandasOps.cpp
python/: CMakeLists.txt  bindings.cpp  generate_mlir.cpp  generate_mlir.h  import_ast.cpp  import_ast.h  pandas_exporter.py
python/test/: test_ast.py
python/test/ibis/: test_ibis_substrait.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/PandasToLinalg/: slice.mlir
tools/: CMakeLists.txt
tools/pandas-mlir-opt/: CMakeLists.txt  pandas-mlir-opt.cpp
